Fix text alignment on table headers

--- a/assets/css/form.scss
+++ b/assets/css/form.scss
@@ -15,3 +15,7 @@ form {
 form .mdc-text-field {
   width: 100%;
 }
+
+th {
+  text-align: left;
+}
